Adding Role specific accesses & docker container